fix: Main nav in dark mode

--- a/src/assets/sass/_main-nav.scss
+++ b/src/assets/sass/_main-nav.scss
@@ -75,3 +75,9 @@ nav[is="main-nav"] {
     }
   }
 }
+
+@media (prefers-color-scheme: dark) {
+  nav[is="main-nav"] > ul > li > a {
+    color: var(--gray-lightest);
+  }
+}
